--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,6 +10,10 @@ on:
         required: true
         default: '0.0.1'
 
+permissions:
+    contents: write
+    packages: write
+
 jobs:
   build-go-binary:
     runs-on: ubuntu-latest
